Initial Commit;Md changes

--- a/mdapp.ipynb
+++ b/mdapp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1217,16 +1217,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# YouTube\n",
+      "\n",
+      "## Origins of the Universe 101 | National Geographic\n",
+      "\n",
+      "### Video Metadata\n",
+      "- **Views:** 7570554\n",
+      "- **Keywords:** national geographic, nat geo, natgeo, animals, wildlife, science, explore, discover, survival, nature, big bang theory, origins, universe, scientific theories, Origins of the Universe, How old is the universe, how did it begin, history, countless myths, explanation, the big bang theory, the explosion, started, the size, an atom, encompass, existence today, PLivjPDlt6ApRfQqtRw7JkGCLvezGeMBB2, PLivjPDlt6ApRiBHpsyXWG22G8RPNZ6jlb, PLivjPDlt6ApS90YoAu-T8VIj6awyflIym, PLivjPDlt6ApRpidjp1zjROOCKru-89Q1_\n",
+      "- **Runtime:** PT5M50S\n",
+      "\n",
+      "### Description\n",
+      "How old is the universe, and how did it begin? Throughout history, countless myths and scientific theories have tried to explain the universe's origins. The most widely accepted explanation is the big bang theory. Learn about the explosion that started it all and how the universe grew from the size of an atom to encompass everything in existence today.\n",
+      "➡ Subscribe: http://bit.ly/NatGeoSubscribe\n",
+      "\n",
+      "About National Geographic:\n",
+      "National Geographic is the world's premium destination for science, exploration, and adventure. Through their world-class scientists, photographers, journalists, and filmmakers, Nat Geo gets you closer to the stories that matter and past the edge of what's possible.\n",
+      "\n",
+      "Get More National Geographic:\n",
+      "Official Site: http://bit.ly/NatGeoOfficialSite\n",
+      "Facebook: http://bit.ly/FBNatGeo\n",
+      "Twitter: http://bit.ly/NatGeoTwitter\n",
+      "Instagram: http://bit.ly/NatGeoInsta\n",
+      "\n",
+      "Origins of the Universe 101 | National Geographic\n",
+      "   • Origins of the Universe 101 | Nationa...\n",
+      "\n",
+      "National Geographic\n",
+      "   / natgeo\n",
+      "\n",
+      "### Transcript\n",
+      "- [Narrator] The universe is everything. From the tiniest particles, to the largest galaxies, to the very existence of\n",
+      "space, time, and life. But how did it all begin? The origin of the universe\n",
+      "is the origin of everything. Multiple scientific theories plus creation myths from around the world have tried to explain\n",
+      "its mysterious genesis. However, the most widely\n",
+      "accepted explanation is the Big Bang theory. The Big Bang theory states\n",
+      "that the universe began as a hot and infinitely dense point. Only a few millimeters\n",
+      "wide, it was similar to a supercharged black hole. About 13.7 billion years ago this tiny singularity violently exploded. And it is from this explosion, this bang, that all matter, energy,\n",
+      "space, and time were created. What happened next were two major stages of the universe's evolution. Called the radiation and matter eras, they're defined by key events that helped shape the universe. First came the radiation era, named for the dominance of radiation right after the Big Bang. This era is made of\n",
+      "smaller stages call epochs that occurred within the universe's first tens of thousands of years. The earliest is the Planck epoch. No matter existed in the\n",
+      "universe at this time, only energy and the ancestor to the four forces of\n",
+      "nature, the superforce. At the end of this stage, however, a key event occurred in which gravity split away from the superforce. Next came the grand unification epoch, named for the three remaining\n",
+      "unified forces of nature. This epoch ended when one of those forces, called strong, or strong\n",
+      "nuclear, broke away. Then the inflationary epoch began during which the universe\n",
+      "rapidly expanded. Almost instantly it grew\n",
+      "from the size of an atom to the size of a grapefruit. The universe at this time was piping hot and it churned with electrons,\n",
+      "quarks, and other particles. Then came the electroweak epoch, when the last two forces,\n",
+      "electromagnetic and weak, finally split off. During the next stage, the quark epoch, all of the universe's\n",
+      "ingredients were present, however, the universe was\n",
+      "still too hot and dense for subatomic particles to form. Then, in the hadron epoch, the\n",
+      "universe cooled down enough for quarks to bind together\n",
+      "and form protons and neutrons. In the lepton and nuclear epics, the radiation era's last two stages, the protons and neutrons\n",
+      "underwent a significant change. They fused and created nuclei. And in doing so, they created the first chemical element in the universe, helium. The universe's new\n",
+      "ability to form elements, the building blocks of matter, queued the matter era. Much as the name suggests,\n",
+      "the matter era's defined by the presence and predominance of matter in the universe. It features three epochs\n",
+      "that span billions of years. The vast majority of the\n",
+      "universe's life span, and includes the present day. The first was the atomic epoch. In this stage, the universe's temperature cooled down enough for electrons to attach to nuclei for the first time. Called recombination,\n",
+      "this process helped create the universe's second element, hydrogen. This hydrogen, along with helium atoms, dotted the universe with atomic clouds. Within the clouds, small pockets of gas may have had enough gravity\n",
+      "to cause atoms to collect. These clusters of atoms, formed\n",
+      "during the galactic epoch, became the seedlings of galaxies. Nestled inside those\n",
+      "galaxies, stars began to form. And in doing so, they queued the latest and current stage of the\n",
+      "universe's development, the stellar epoch. The formation of stars then caused a tremendous ripple effect and helped shape the\n",
+      "universe as we know it. Heat within the stars\n",
+      "caused the conversion of helium and hydrogen into almost all the remaining elements in the universe. In turn, those elements\n",
+      "became the building blocks for planets, moons, life, everything we see today. This ecosystem of\n",
+      "everything was only possible because of the many stages in\n",
+      "the universe's development. While countless questions\n",
+      "about the origins of our universe remain,\n",
+      "it's only a matter of time for some long-sought answers to emerge.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "result_transcript = md.convert_url(\"https://www.youtube.com/watch?v=HdPzOWlLrbE\")\n",
     "print(result_transcript.text_content)"
@@ -1234,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,28 +1390,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is a comprehensive and engaging summary of the Big Bang theory and the universe's evolution. Here are some key points that stand out:\n",
+      "This script provides an overview of the Big Bang theory and the evolution of the universe, breaking down its major stages into radiation and matter eras. The narrator effectively explains complex scientific concepts in an engaging and easy-to-understand manner.\n",
       "\n",
-      "1. **The Big Bang Theory**: The most widely accepted explanation for the origin of the universe, proposing that it began as an infinitely dense point around 13.7 billion years ago.\n",
+      "The structure of the script is clear and concise, dividing the narrative into distinct epochs (e.g., Planck epoch, grand unification epoch, inflationary epoch) to help visualize the universe's rapid expansion during its early stages. This approach allows listeners to grasp the sequence of events without becoming overwhelmed by technical details.\n",
       "\n",
-      "2. **Radiation Era**: Divided into several stages, including Planck epoch, grand unification epoch, inflationary epoch, electroweak epoch, quark epoch, hadron epoch, lepton epoch, and nuclear epoch, each with unique characteristics and significant events that shaped the universe.\n",
+      "Some effective techniques used in this script include:\n",
       "\n",
-      "3. **Matter Era**: Comprises three epochs: atomic epoch, galactic epoch, and stellar epoch, which cover billions of years and include the formation of stars, galaxies, planets, and ultimately, life.\n",
+      "1. Analogies: Comparing the universe to a \"supercharged black hole\" and a grapefruit helps illustrate complex concepts, making them more accessible to a wider audience.\n",
+      "2. Storytelling: The narrative is presented as a chronological journey through the universe's evolution, using language like \"the next stage\" and \"then came,\" which creates a sense of progression and excitement.\n",
+      "3. Clear definitions: Key terms, such as \"recombination\" and \"grand unification epoch,\" are explained in simple terms, ensuring that listeners understand the underlying concepts.\n",
+      "4. Contextualization: The script highlights the significance of each stage, explaining how they contributed to the universe's development and ultimately shaped our reality.\n",
       "\n",
-      "4. **Stellar Epoch**: The latest stage in the universe's development, where the conversion of helium and hydrogen into almost all remaining elements occurred, setting the stage for the diversity of elements we see today.\n",
+      "However, there are a few areas for improvement:\n",
       "\n",
-      "5. **Interconnectedness**: The summary highlights how each epoch builds upon the previous one, illustrating a complex and interconnected process that has shaped our universe over billions of years.\n",
+      "1. Transitions between sections: While the script is generally well-structured, some transitions could be smoother. For example, the transition from the radiation era to the matter era feels a bit abrupt.\n",
+      "2. Technical details: While the narrator avoids overwhelming listeners with technical jargon, some readers might appreciate additional explanations or examples for more complex concepts, such as inflationary epoch and quark binding.\n",
+      "3. Depth vs. breadth: The script covers many stages of the universe's evolution but might benefit from providing more depth on specific topics, rather than glossing over them.\n",
       "\n",
-      "6. **Current Understanding and Future Questions**: While there are many unanswered questions about the origins of our universe, ongoing scientific research is expected to provide more insights and shed light on these mysteries in the future.\n",
-      "\n",
-      "Overall, this summary provides a clear and concise overview of the Big Bang theory and the universe's evolution, emphasizing the intricate connections between different stages and epochs.\n"
+      "Overall, this script provides an excellent introduction to the Big Bang theory and the universe's evolution, making it an engaging and informative resource for audiences interested in science and astronomy.\n"
      ]
     }
    ],
@@ -1360,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,14 +1461,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The image features a motivational quote overlaid on a photograph. The text of the quote reads \"YOU ONLY FAIL WHEN YOU STOP TRYING\" in capital letters, suggesting an inspirational message about perseverance and effort. The background of the photograph shows a coastal scene with rocks, seaweed, and what appears to be a sunset or sunrise glowing over the horizon. In the bottom right corner, there is a rocky outcropping with a cave entrance visible. The overall style of the image seems to blend motivational content with a natural landscape setting. \n"
+      " The image features a motivational quote on a background that appears to be a rocky coastline with the sun low in the sky, creating a warm glow. The quote reads \"YOU ONLY FAIL WHEN YOU STOP TRYING,\" which is displayed in white capital letters against the background. The text and the background together convey a message of perseverance and resilience. \n"
      ]
     }
    ],
