Update to Image with OpenAI client and md;

--- a/mdapp.ipynb
+++ b/mdapp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
       "## Origins of the Universe 101 | National Geographic\n",
       "\n",
       "### Video Metadata\n",
-      "- **Views:** 7570554\n",
+      "- **Views:** 7572618\n",
       "- **Keywords:** national geographic, nat geo, natgeo, animals, wildlife, science, explore, discover, survival, nature, big bang theory, origins, universe, scientific theories, Origins of the Universe, How old is the universe, how did it begin, history, countless myths, explanation, the big bang theory, the explosion, started, the size, an atom, encompass, existence today, PLivjPDlt6ApRfQqtRw7JkGCLvezGeMBB2, PLivjPDlt6ApRiBHpsyXWG22G8RPNZ6jlb, PLivjPDlt6ApS90YoAu-T8VIj6awyflIym, PLivjPDlt6ApRpidjp1zjROOCKru-89Q1_\n",
       "- **Runtime:** PT5M50S\n",
       "\n",
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,31 +1390,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This script provides an overview of the Big Bang theory and the evolution of the universe, breaking down its major stages into radiation and matter eras. The narrator effectively explains complex scientific concepts in an engaging and easy-to-understand manner.\n",
+      "This is a comprehensive explanation of the Big Bang theory and the evolution of the universe, covering the radiation era, matter era, and stellar epoch. Here are some key points summarized:\n",
       "\n",
-      "The structure of the script is clear and concise, dividing the narrative into distinct epochs (e.g., Planck epoch, grand unification epoch, inflationary epoch) to help visualize the universe's rapid expansion during its early stages. This approach allows listeners to grasp the sequence of events without becoming overwhelmed by technical details.\n",
+      "**The Big Bang Theory**\n",
       "\n",
-      "Some effective techniques used in this script include:\n",
+      "* The universe began as a hot and infinitely dense point about 13.7 billion years ago\n",
+      "* This singularity violently exploded, creating all matter, energy, space, and time\n",
       "\n",
-      "1. Analogies: Comparing the universe to a \"supercharged black hole\" and a grapefruit helps illustrate complex concepts, making them more accessible to a wider audience.\n",
-      "2. Storytelling: The narrative is presented as a chronological journey through the universe's evolution, using language like \"the next stage\" and \"then came,\" which creates a sense of progression and excitement.\n",
-      "3. Clear definitions: Key terms, such as \"recombination\" and \"grand unification epoch,\" are explained in simple terms, ensuring that listeners understand the underlying concepts.\n",
-      "4. Contextualization: The script highlights the significance of each stage, explaining how they contributed to the universe's development and ultimately shaped our reality.\n",
+      "**Radiation Era**\n",
       "\n",
-      "However, there are a few areas for improvement:\n",
+      "* The earliest stage is the Planck epoch, where no matter existed, only energy and the superforce\n",
+      "* Gravity split away from the superforce at the end of this stage\n",
+      "* The grand unification epoch followed, with three remaining unified forces of nature\n",
+      "* One of these forces (strong or strong nuclear) broke away, ending this epoch\n",
+      "* Inflationary epoch began, with rapid expansion of the universe\n",
+      "* Universe was piping hot and churned with electrons, quarks, and other particles\n",
       "\n",
-      "1. Transitions between sections: While the script is generally well-structured, some transitions could be smoother. For example, the transition from the radiation era to the matter era feels a bit abrupt.\n",
-      "2. Technical details: While the narrator avoids overwhelming listeners with technical jargon, some readers might appreciate additional explanations or examples for more complex concepts, such as inflationary epoch and quark binding.\n",
-      "3. Depth vs. breadth: The script covers many stages of the universe's evolution but might benefit from providing more depth on specific topics, rather than glossing over them.\n",
+      "**Matter Era**\n",
       "\n",
-      "Overall, this script provides an excellent introduction to the Big Bang theory and the universe's evolution, making it an engaging and informative resource for audiences interested in science and astronomy.\n"
+      "* The electroweak epoch followed, where the last two forces (electromagnetic and weak) split off\n",
+      "* Quark epoch came next, with all ingredients present but too hot for subatomic particles to form\n",
+      "* Hadron epoch saw cooling enough for quarks to bind together and form protons and neutrons\n",
+      "* Lepton and nuclear epics followed, where protons and neutrons fused to create nuclei and the first chemical element (helium)\n",
+      "\n",
+      "**Stellar Epoch**\n",
+      "\n",
+      "* The atomic epoch came next, with electrons attaching to nuclei through recombination\n",
+      "* This process created hydrogen and helium atoms, which dotted the universe with atomic clouds\n",
+      "* Clusters of gas formed during the galactic epoch became seedlings of galaxies\n",
+      "* Stars formed within these galaxies, causing a ripple effect that shaped the universe\n",
+      "\n",
+      "**Conclusion**\n",
+      "\n",
+      "* The universe's development is a series of stages, each building on the last\n",
+      "* The formation of stars created the elements needed for planets and life to form\n",
+      "* While many questions about the origins of the universe remain unanswered, it's likely that some will be resolved in the future.\n"
      ]
     }
    ],
@@ -1431,50 +1448,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Path to your image\n",
-    "image_path = 'data/quote.jpg'\n",
-    "\n",
-    "# Prepare the message to send to the LLaVA model\n",
-    "message = {\n",
-    "    'role': 'user',\n",
-    "    'content': 'Describe this image:',\n",
-    "    'images': [image_path]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the ollama.chat function to send the image and retrieve the description\n",
-    "response = ollama.chat(\n",
-    "    model=\"llava\",\n",
-    "    messages=[message]\n",
+    "from openai import OpenAI\n",
+    "client = OpenAI(\n",
+    "    base_url='http://localhost:11434/v1',\n",
+    "    api_key='ollama'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The image features a motivational quote on a background that appears to be a rocky coastline with the sun low in the sky, creating a warm glow. The quote reads \"YOU ONLY FAIL WHEN YOU STOP TRYING,\" which is displayed in white capital letters against the background. The text and the background together convey a message of perseverance and resilience. \n"
+      "\n",
+      "# Description:\n",
+      "The image displays a powerful quote that reads, \"YOU ONLY FAIL WHEN YOU STOP TRYING.\" This message conveys a crucial life lesson about persistence, resilience, and the importance of never giving up on your goals. It suggests that failure is a result of one's determination; if one does not stop trying, they are less likely to fail. The background of the photo showcases a serene beach scene with a rocky coastline, suggesting a reflection on nature, life, and the human spirit's resilience in the face of challenges.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Print the model's description of the image\n",
-    "print(response.message.content)"
+    "md = MarkItDown(llm_client=client, llm_model=\"llava\")\n",
+    "result = md.convert(\"data/quote.jpg\")\n",
+    "print(result.text_content)"
    ]
   }
  ],
